changed style and title

--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Just for test</title>
+    <title>震惊！午夜拉仇恨怎能到如此地步！！中国或成最大输家</title>
     <link rel="stylesheet" type="text/css" href="./styles/main.css">
 </head>
 <body>
