--- a/views/stats.html
+++ b/views/stats.html
@@ -9,6 +9,7 @@
 		<li>
 			<b>Liked image</b>: {{item.like.index}}<br/>
 			<b>Location</b>: {{item.like.lati}} {{item.like.longi}}<br/>
+			Liked: {{item.like.liked}}<br/>
 			{{item.user.type}}
 		</li>
 	{% endfor %}
