--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>饿了请的点赞，饱了的请转发</title>
+    <title>饱了请的点赞，饿了的请转发</title>
     <link rel="stylesheet" type="text/css" href="./styles/main.css">
 </head>
 <body>
