--- a/views/index.html
+++ b/views/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>饱了请的点赞，饿了的请转发</title>
+    <meta name="viewport" content="width=device-width, user-scalable=0"> 
     <link rel="stylesheet" type="text/css" href="./styles/main.css">
 </head>
 <body>
