--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -5,6 +5,7 @@
 }
 
 body{
+	cursor : pointer;
 	color : #2F2933;
 	text-align: center;
 	margin : 0;
@@ -122,11 +123,15 @@ body{
   transition-property: transform, opacity;
   transition-timing-function: ease-out;
   transform: translate3d(0,100%,0);
+  -webkit-transform: translate3d(0,100%,0);
+
   z-index: 10000;
 }
 
 .moveUp-enter.moveUp-enter-active {
   transform: translate3d(0,0,0);
+  -webkit-transform: translate3d(0,0,0);
+
 }
 
 .moveUp-leave {
@@ -136,11 +141,15 @@ body{
   transition-property: transform, opacity;
   transition-timing-function: ease-out;
   transform: translate3d(0,0,0);
+  -webkit-transform: translate3d(0,0,0);
+
   opacity: 1;
 }
 
 .moveUp-leave.moveUp-leave-active {
   transform: translate3d(0,-15%,0);
+  -webkit-transform: translate3d(0,-15%,0);
+
   opacity: 0.3;
 }
 
@@ -151,6 +160,8 @@ body{
   transition-property: transform, opacity;
   transition-timing-function: ease-out;
   transform: translate3d(0,-100%,0);
+  -webkit-transform: translate3d(0,-100%,0);
+
   z-index: 10000;
 }
 
@@ -165,11 +176,14 @@ body{
   transition-property: transform, opacity;
   transition-timing-function: ease-out;
   transform: translate3d(0,0,0);
+  -webkit-transform: translate3d(0,0,0);
+
   opacity: 1;
 }
 
 .moveDown-leave.moveDown-leave-active {
   transform: translate3d(0,15%,0);
+  -webkit-transform: translate3d(0,15%,0);
   opacity: 0.3;
 }
 
