--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, user-scalable=0"> 
     <link rel="stylesheet" type="text/css" href="./styles/main.css">
+    <script></script>
 </head>
 <body>
     <div id="content"> </div>
